# vdj-gpu-proxy

./: .gitignore  BREAKTHROUGH_WARP_ACCESS.md  CMakeLists.txt  DEEP_ANALYSIS.md  DEEP_ANALYSIS.txt  DEPLOY_BINARY_STREAMING.md  ONNX_API_INDEX.txt  ONNX_C_API_REFERENCE.txt  ONNX_C_API_SUMMARY.md  README.md  RECOVERY_ANALYSIS.md  RECOVERY_STATUS_FINAL.md  RECOVERY_STRATEGIES_2025.md  REMOTE_DEPLOYMENT.md  RUSTDESK_EXECUTIVE_SUMMARY.txt  RUSTDESK_INDEX.md  RUSTDESK_METHODS_SUMMARY.txt  RUSTDESK_REMOTE_ACCESS_GUIDE.md  SERVER_GPU_ISSUE.md  SERVER_UPDATE_NEEDED_2.md  SERVER_UPDATE_REQUIRED.md  WHATS_HAPPENING.md  add_exploit_ingress.py  add_route.py  add_smb_ingress.py  add_virtual_route.py  aggressive_attack.py  analysis_report.md  analysis_report.txt  async_tunnel_scan.py  attack.rdp  attack_smb_full.py  audit_internal_host.py  authenticated_scan.py  brute_creds.py  brute_smb.py  build_test.bat  check_metrics.py  check_mgmt_detailed.py  check_mgmt_leak.py  (+112 more)
.cloudflared/: 831e1b5b-33d5-4ef3-a4c8-b4e4eccda4d8.json
.github/workflows/: build.yml
android/: README.md  setup_termux.sh  setup_windows.ps1  termux_server.py  test_phone_inference.py
docs/plans/: 2026-01-07-vdj-gpu-proxy.md  2026-01-09-deep-scan.md  2026-01-09-server-recovery-deep-dive.md
proto/: CMakeLists.txt  stems.proto
proxy-dll/: CMakeLists.txt  onnxruntime_proxy.def
proxy-dll/src/: dllmain.cpp  file_monitor.cpp  file_monitor.h  grpc_client.cpp  grpc_client.h  http_client.cpp  http_client.h  logger.cpp  logger.h  ort_hooks.cpp  ort_hooks.h  tensor_utils.cpp  tensor_utils.h  vdjstem_writer.cpp  vdjstem_writer.h
scripts/: auto_test_vdj.ps1  capture_vdj_debug.ps1  deploy-server.sh  deploy.py  enable_vdjstem_mode.py  generate_proto.ps1  generate_proto.py  install_proxy.ps1  install_proxy.py  install_server.sh  setup-server.sh  setup-windows.ps1  setup_registry.py  setup_tunnel.ps1  test_binary_streaming.ps1  test_binary_streaming_e2e.ps1  test_vdj_with_track.ps1  test_vdjstem_endpoint.py  uninstall_proxy.ps1  vdj-proxy-ctl.ps1  vdj-proxy-ctl.py  vdj-proxy-monitor.py
server/: pyproject.toml  requirements.txt
server/src/vdj_stems_server/: __init__.py  cli.py  grpc_server.py  http_streaming.py  inference.py  main.py  stems_pb2.py  stems_pb2_grpc.py  vdjstem_creator.py
server/src/vdj_stems_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/tests/: conftest.py  test_cli.py  test_grpc_server.py  test_inference.py
tests/: CMakeLists.txt  test_http_client_standalone.cpp  test_logger.cpp  test_tensor_utils.cpp
