[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vdj-stems-server"
version = "1.0.0"
description = "GPU server for VirtualDJ stems offloading"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "demucs>=4.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
vdj-stems-server = "vdj_stems_server.main:main"

[tool.setuptools.packages.find]
where = ["src"]
